[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-wifiscanner = "0.2"
sha2 = "0.10" # For hashing identifiers
btleplug = { version = "0.9", features = ["macos-integration"] } # For Bluetooth scanning
chrono = { version = "0.4", features = ["serde"] } # For timestamps
